bank-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebank-api-k8s-staging

---

apiVersion: v1
kind: Namespace
metadata:
  name: ebank-api-k8s-production
